# avm

./: .cursorrules  AGENTS.md  Cargo.toml  README.md
.agents/skills/add-general-tool/: SKILL.md
.github/workflows/: check.yml  ci.yml  draft.yml  release.yml  test.yml
src/: lib.rs  main.rs  platform.rs  tool.rs
src/cli/: mod.rs
src/cli/tool/: alias.rs  bin_path.rs  clean.rs  copy.rs  delete.rs  exe_path.rs  get_downinfo.rs  get_downurl.rs  get_vers.rs  install.rs  install_from_archive.rs  install_local.rs  list.rs  mod.rs  path.rs  run.rs
src/io/: blocking.rs  mod.rs
src/tool/: general_tool.rs
src/tool/general_tool/: AGENTS.md  dotnet.rs  go.rs  liberica.rs  node.rs  pnpm.rs
