[package]
name = "any-version-manager"
authors = ["Jason5Lee <jason5lee@hotmail.com>"]
description = "(Potentially) Any language Version Manager, a Command-Line Interface tool designed to manage multiple versions of development tools for potentially any programming language, maximizing code reuse."
license = "MIT"
readme = "README.md"
version = "0.0.3"
edition = "2021"
repository = "https://github.com/Jason5Lee/avm"

[dependencies]
anyhow = "1.0"
async-trait = "0.1"
clap = { version = "4.5", features = ["string"] }
ctrlc = "3.4"
directories = "6.0"
fs_extra = "1.3"
fxhash = "0.2.1"
hex = "0.4"
indicatif = "0.17"
log = "0.4"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls", "http2", "charset"] }

serde = { version = "1.0", features = ["derive"] }
serde_yaml_ng = "0.10"
sha1 = "0.10"
sha2 = "0.10"
smol_str = { version = "0.3", features = ["serde"] }
stderrlog = "0.6"
tar = "0.4"
tokio = "1.44"
zip = "2.6"
flate2 = "1.1"
xz2 = "0.1"

[target.'cfg(windows)'.dependencies]
junction = "1.2"
