[package]
name = "any-version-manager"
authors = ["Jason5Lee <jason5lee@hotmail.com>"]
description = "A CLI tool designed to manage multiple versions of multiple development tools for multiple programming languages with shared workflows."
license = "MIT"
readme = "README.md"
version = "0.0.5"
edition = "2021"
repository = "https://github.com/Jason5Lee/avm"

[dependencies]
anyhow = "1"
async-trait = "0.1"
clap = { version = "4.6", features = ["derive", "string"] }
ctrlc = "3.5.2"
directories = "6.0.0"
fs_extra = "1.3.0"
rustc-hash = "2.1.1"
hex = "0.4"
indicatif = "0.18.4"
log = "0.4"
reqwest = { version = "0.13.2", features = ["json", "http2", "charset"] }

serde = { version = "1", features = ["derive"] }
sha1 = "0.11.0"
sha2 = "0.11.0"
smol_str = { version = "0.3.6", features = ["serde"] }
stderrlog = "0.6.0"
tar = "0.4"
tokio = "1"
zip = "8.3.1"
flate2 = "1.1.9"
xz2 = "0.1.7"
toml = "1.1.2"

[target.'cfg(windows)'.dependencies]
junction = "1.4.1"
